# cmdx

./: .gitignore  README.md  main.py  pyproject.toml
core/: agent.py  executor.py  explainer.py  fallback.py  generator.py  llm_parser.py  logger.py  normalizer.py  observation.py  os_adapter.py  parser.py  plan_schema.py  planner.py  policy.py  reflection.py  risk_analyzer.py  schema.py  session_memory.py  validator.py
core/tools/: __init__.py  base.py  command_tools.py  registry.py
docs/: demo.md
prompts/: __init__.py  command_fallback_prompt.txt  parser_prompt.txt  planner_prompt.txt  reflection_prompt.txt
tests/: test_agent.py  test_executor.py  test_explainer.py  test_fallback.py  test_generator.py  test_llm_parser.py  test_logger.py  test_normalizer.py  test_observation.py  test_plan_schema.py  test_planner.py  test_policy.py  test_reflection.py  test_risk.py  test_session_memory.py  test_tool_registry.py  test_validator.py
